Robert Hogan. WIP. Corrected previous issue of navbar placement to eliminate the white space issue. Cleaned up other sizing issues. Further progress on the project.

--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -16,102 +15,88 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display: block;
+    display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
 }
 ol, ul {
-	list-style: none;
+    list-style: none;
 }
 blockquote, q {
-	quotes: none;
+    quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+    content: '';
+    content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
-
                                 /* Set every element's box-sizing to border-box */
 * {
     box-sizing: border-box;
 }
-
 html, body {
     font-size: 62.5%;
     height: 100%;
     font-family: 'Titillium Web', sans-serif;
 }
-
 h1, h2, h3, h4, h5 {
     font-family: 'Bangers', cursive;
     letter-spacing: 1px;
     margin-bottom: 10px;
 }
-
 .container {
     max-width: 880px;
     width: 100%;
     margin: auto;
     font-size: 1.6rem;
 }
-
                                         /* Header Styles */
-
 header {
     width: 100%;
     display: flex;
 }
-
 header nav {
     width: 100%
 }
-
 header nav ul {
     margin: 40px 5% 0;
     width: 100%;
     justify-content: space-between;
     display: flex;
 }
-
 header nav ul li a {
     text-decoration: none;
     color: #b0b0b0;
 }
-
 header nav ul li a:hover {
     text-decoration: underline;
     color: black;
 }
-
 header .logo {
     align-self: flex-end;
     margin: 28px 0 0 91px;
 }
-
                                     /* Call To Action (CTA) Styles */
-
 .cta {
     display: flex;
     margin-top: 72px;
     justify-content: flex-end;
 }
-
 .cta .cta-text {
     font-size: 7.2rem;
     text-align: center;
@@ -122,7 +107,6 @@ header .logo {
     align-items: center;
     margin: 0 9% 0 0;
 }
-
 .cta .cta-text button {
     border: 1px double black;
     font-size: 1.6rem;
@@ -132,14 +116,11 @@ header .logo {
     margin-top: 10px;
     cursor: pointer;
 }
-
 .cta .cta-text button:hover {
     background: black;
     color: white;
 }
-
                                             /* Main Content Styles */
-
 .main-content {
    border-top: 2px solid gray; 
    border-bottom: 2px solid black;
@@ -148,195 +129,151 @@ header .logo {
    font-size: 1.6rem;
    line-height: 1.8rem;
 }
-
 .main-content .top-content {
     display: flex;
     justify-content: space-around;
 }
-
 .main-content .middle-img {
     max-width: 100%;
     display: block;
     margin: 30px auto;
 }
-
 .main-content .bottom-content {
     display: flex;
     justify-content: space-around;
 }
-
 .main-content .bottom-content p {
     padding-right: 2%;
 }
-
                                 /* Contact Styles */
-
 .content {
     margin: 20px 1%;
 }
-
 .contact p {
     margin: 15px 0;
 }
-
                                 /* Footer Styles */
-
 footer {
     text-align: center;
     margin: 40px 0 20px;
 }
-
-
                                 /* Tablet breakpoint below */
-
 @media (max-width: 768px) {
-
     .container {
         width:100%;
     }
-
     header nav ul {
         width: 457px;
-        margin-left: 20px;
+        margin: 0;
     }
-
     header .logo {
         margin: 28px 20px 0 59px;
     }
-
     .cta {
         justify-content: center;
     }
-
     .cta .cta-text {
         margin: 0 10px 0 0;
     }
-
     .main-content .middle-img {
         width: 100%;
     }
-
     .main-content {
         margin: 75px 2% 35px;
     }
-
     .contact{
         margin-left: 20px 2%;
     }
-
     .contact {
         margin-left: 2%;
     }
-
-
-
 }
-
                                     /* Phone breakpoint below */
-
 @media (max-width: 400px) {
-
     .container {
         max-width: 100%;
     }
-
     header nav ul {
         width: 100%;
         display: flex;
         flex-flow: column;
     }
-
     header .logo {
         order: -1;
         margin: 28px 0 0 30px;
         display: flex;
         align-items: center;
     }
-
     .cta {
         justify-content: center;
         display: flex;
         flex-direction: column;
-
     }
-
     .cta .cta-text {
         margin: 0 0 0 12px;
     }
-
     .main-content .middle-img {
         margin-left: 10px;
         width: 100%;
     }
-
     .main-content {
         margin: 75px 20px 35px;
         display: flex;
         flex-direction: column;
     }
-
     .main-content .top-content {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
     }
-
     .main-content .top-content p {
         margin-bottom: 30px;
     }
-
     .main-content .bottom-content {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
     }
-
     .main-content .bottom-content p {
         margin-bottom: 30px;
     }
-
     .contact{
         margin-left: 20px;
     }
-
     header {
         display: flex;
+        width: 100%;
         flex-wrap: wrap;
         justify-content: center;
     }
-
     header nav {
         width: 100%;
+        margin: 0;
     }
-
     header nav ul {
         display: flex;
         flex-wrap: wrap;
+        border: 1px solid black;
     }
-
     header nav ul li a {
-        display: block;
         width: 100%;
         text-align: center;
         line-height: 2;
         padding: 2%;
         font-size: 2rem;
-        justify-content: space-around;
+        align-content: flex-start;
+        border-top: 1px solid black;
         margin-bottom: 20px;
     }
-
     header nav ul li {
         display: flex;
-        border-bottom: 1px solid gray;
-        border-top: 1px solid gray;
+        width: 100%;
     }
-
     .circularImg {
         height: 310px;
         width: 310px;
         margin-left: 50px;
     }
-
     .cta .cta-text button {
         margin-bottom: 40px;
     }
